// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Snapshot should render heading 1 correctly 1`] = `
.emotion-0 {
  border-bottom: 2px solid transparent;
  font-family: var(--headingFont);
  padding: 0;
  color: var(--colors-neutral);
  font-size: var(--typographyVisualStyles-headingXLarge-mobile-fontSize);
  font-weight: var(--typographyVisualStyles-headingXLarge-fontWeight);
  line-height: var(--typographyVisualStyles-headingXLarge-mobile-lineHeight);
  margin: 0 0 var(--spaceScale-spacing05);
}

.emotion-0:focus {
  border-bottom: 2px dotted var(--colors-focus);
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

@media (min-width: 600px) {
  .emotion-0 {
    font-size: var(--typographyVisualStyles-headingXLarge-desktop-fontSize};
        line-height: var(--typographyVisualStyles-headingXLarge-desktop-lineHeight};
      }

      ;

      ;;};label:headingXLargeStyles;;;};}};
  }
}

.emotion-0 {
  border-bottom: 2px solid transparent;
  font-family: var(--headingFont);
  padding: 0;
  color: var(--colors-neutral);
  font-size: var(--typographyVisualStyles-headingXLarge-mobile-fontSize);
  font-weight: var(--typographyVisualStyles-headingXLarge-fontWeight);
  line-height: var(--typographyVisualStyles-headingXLarge-mobile-lineHeight);
  margin: 0 0 var(--spaceScale-spacing05);
}

.emotion-0:focus {
  border-bottom: 2px dotted var(--colors-focus);
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

@media (min-width: 600px) {
  .emotion-0 {
    font-size: var(--typographyVisualStyles-headingXLarge-desktop-fontSize};
        line-height: var(--typographyVisualStyles-headingXLarge-desktop-lineHeight};
      }

      ;

      ;;};label:headingXLargeStyles;;;};}};
  }
}

<div>
  <h1
    class="emotion-0 emotion-1"
    id="testId"
  >
    Heading 1
  </h1>
</div>
`;

exports[`Heading Snapshot should render heading 2 correctly 1`] = `
.emotion-0 {
  border-bottom: 2px solid transparent;
  font-family: var(--headingFont);
  padding: 0;
  color: var(--colors-neutral);
  font-size: var(--typographyVisualStyles-headingLarge-mobile-fontSize);
  font-weight: var(--typographyVisualStyles-headingLarge-fontWeight);
  line-height: var(--typographyVisualStyles-headingLarge-mobile-lineHeight);
  margin: var(--spaceScale-spacing10) 0 var(--spaceScale-spacing05);
}

.emotion-0:focus {
  border-bottom: 2px dotted var(--colors-focus);
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

@media (min-width: 600px) {
  .emotion-0 {
    font-size: var(--typographyVisualStyles-headingLarge-desktop-fontSize);
    line-height: var(--typographyVisualStyles-headingLarge-desktop-lineHeight);
  }
}

.emotion-0 {
  border-bottom: 2px solid transparent;
  font-family: var(--headingFont);
  padding: 0;
  color: var(--colors-neutral);
  font-size: var(--typographyVisualStyles-headingLarge-mobile-fontSize);
  font-weight: var(--typographyVisualStyles-headingLarge-fontWeight);
  line-height: var(--typographyVisualStyles-headingLarge-mobile-lineHeight);
  margin: var(--spaceScale-spacing10) 0 var(--spaceScale-spacing05);
}

.emotion-0:focus {
  border-bottom: 2px dotted var(--colors-focus);
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

@media (min-width: 600px) {
  .emotion-0 {
    font-size: var(--typographyVisualStyles-headingLarge-desktop-fontSize);
    line-height: var(--typographyVisualStyles-headingLarge-desktop-lineHeight);
  }
}

<div>
  <h2
    class="emotion-0 emotion-1"
  >
    Heading 2
  </h2>
</div>
`;

exports[`Heading Snapshot should render heading 3 correctly 1`] = `
.emotion-0 {
  border-bottom: 2px solid transparent;
  font-family: var(--headingFont);
  padding: 0;
  color: var(--colors-neutral);
  font-size: var(--typographyVisualStyles-headingMedium-mobile-fontSize);
  font-weight: var(--typographyVisualStyles-headingMedium-fontWeight);
  line-height: var(--typographyVisualStyles-headingMedium-mobile-lineHeight);
  margin: var(--spaceScale-spacing09) 0 var(--spaceScale-spacing05);
}

.emotion-0:focus {
  border-bottom: 2px dotted var(--colors-focus);
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

@media (min-width: 600px) {
  .emotion-0 {
    font-size: var(--typographyVisualStyles-headingMedium-desktop-fontSize);
    line-height: var(--typographyVisualStyles-headingMedium-desktop-lineHeight);
  }
}

.emotion-0 {
  border-bottom: 2px solid transparent;
  font-family: var(--headingFont);
  padding: 0;
  color: var(--colors-neutral);
  font-size: var(--typographyVisualStyles-headingMedium-mobile-fontSize);
  font-weight: var(--typographyVisualStyles-headingMedium-fontWeight);
  line-height: var(--typographyVisualStyles-headingMedium-mobile-lineHeight);
  margin: var(--spaceScale-spacing09) 0 var(--spaceScale-spacing05);
}

.emotion-0:focus {
  border-bottom: 2px dotted var(--colors-focus);
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

@media (min-width: 600px) {
  .emotion-0 {
    font-size: var(--typographyVisualStyles-headingMedium-desktop-fontSize);
    line-height: var(--typographyVisualStyles-headingMedium-desktop-lineHeight);
  }
}

<div>
  <h3
    class="emotion-0 emotion-1"
  >
    Heading 3
  </h3>
</div>
`;

exports[`Heading Snapshot should render heading 4 correctly 1`] = `
.emotion-0 {
  border-bottom: 2px solid transparent;
  font-family: var(--headingFont);
  padding: 0;
  color: var(--colors-neutral);
  font-size: var(--typographyVisualStyles-headingSmall-mobile-fontSize);
  font-weight: var(--typographyVisualStyles-headingSmall-fontWeight);
  line-height: var(--typographyVisualStyles-headingSmall-mobile-lineHeight);
  margin: var(--spaceScale-spacing08) 0 var(--spaceScale-spacing05);
}

.emotion-0:focus {
  border-bottom: 2px dotted var(--colors-focus);
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

@media (min-width: 600px) {
  .emotion-0 {
    font-size: var(--typographyVisualStyles-headingSmall-desktop-fontSize);
    line-height: var(--typographyVisualStyles-headingSmall-desktop-lineHeight);
  }
}

.emotion-0 {
  border-bottom: 2px solid transparent;
  font-family: var(--headingFont);
  padding: 0;
  color: var(--colors-neutral);
  font-size: var(--typographyVisualStyles-headingSmall-mobile-fontSize);
  font-weight: var(--typographyVisualStyles-headingSmall-fontWeight);
  line-height: var(--typographyVisualStyles-headingSmall-mobile-lineHeight);
  margin: var(--spaceScale-spacing08) 0 var(--spaceScale-spacing05);
}

.emotion-0:focus {
  border-bottom: 2px dotted var(--colors-focus);
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

@media (min-width: 600px) {
  .emotion-0 {
    font-size: var(--typographyVisualStyles-headingSmall-desktop-fontSize);
    line-height: var(--typographyVisualStyles-headingSmall-desktop-lineHeight);
  }
}

<div>
  <h4
    class="emotion-0 emotion-1"
  >
    Heading 4
  </h4>
</div>
`;

exports[`Heading Snapshot should render heading 5 correctly 1`] = `
.emotion-0 {
  border-bottom: 2px solid transparent;
  font-family: var(--headingFont);
  padding: 0;
  color: var(--colors-neutral);
  font-size: var(--typographyVisualStyles-headingXSmall-mobile-fontSize);
  font-weight: var(--typographyVisualStyles-headingXSmall-fontWeight);
  line-height: var(--typographyVisualStyles-headingXSmall-mobile-lineHeight);
  margin: var(--spaceScale-spacing06} 0 var(--spaceScale-spacing05);@media (min-width: 600px){font-size:var(--typographyVisualStyles-headingXSmall-desktop-fontSize);line-height:var(--typographyVisualStyles-headingXSmall-desktop-lineHeight);};;;label:headingXSmallStyles;;;};}.emotion-0:focus{border-bottom:2px dotted var(--colors-focus);outline:0;-webkit-transition:border 0.1s linear;transition:border 0.1s linear;};
}

.emotion-0 {
  border-bottom: 2px solid transparent;
  font-family: var(--headingFont);
  padding: 0;
  color: var(--colors-neutral);
  font-size: var(--typographyVisualStyles-headingXSmall-mobile-fontSize);
  font-weight: var(--typographyVisualStyles-headingXSmall-fontWeight);
  line-height: var(--typographyVisualStyles-headingXSmall-mobile-lineHeight);
  margin: var(--spaceScale-spacing06} 0 var(--spaceScale-spacing05);@media (min-width: 600px){font-size:var(--typographyVisualStyles-headingXSmall-desktop-fontSize);line-height:var(--typographyVisualStyles-headingXSmall-desktop-lineHeight);};;;label:headingXSmallStyles;;;};}.emotion-0:focus{border-bottom:2px dotted var(--colors-focus);outline:0;-webkit-transition:border 0.1s linear;transition:border 0.1s linear;};
}

<div>
  <h5
    class="emotion-0 emotion-1"
  >
    Heading 5
  </h5>
</div>
`;

exports[`Heading Snapshot should render heading 6 correctly 1`] = `
.emotion-0 {
  border-bottom: 2px solid transparent;
  font-family: var(--headingFont);
  padding: 0;
  color: var(--colors-neutral);
  font-size: var(--typographyVisualStyles-heading2XSmall-mobile-fontSize);
  font-weight: var(--typographyVisualStyles-heading2XSmall-fontWeight);
  line-height: var(--typographyVisualStyles-heading2XSmall-mobile-lineHeight);
  text-transform: uppercase;
  margin: var(--spaceScale-spacing06) 0 var(--spaceScale-spacing03);
}

.emotion-0:focus {
  border-bottom: 2px dotted var(--colors-focus);
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

@media (min-width: 600px) {
  .emotion-0 {
    font-size: var(--typographyVisualStyles-heading2XSmall-desktop-fontSize);
    line-height: var(
          --typographyVisualStyles-heading2XSmall-desktop-lineHeight
        );
  }
}

.emotion-0 {
  border-bottom: 2px solid transparent;
  font-family: var(--headingFont);
  padding: 0;
  color: var(--colors-neutral);
  font-size: var(--typographyVisualStyles-heading2XSmall-mobile-fontSize);
  font-weight: var(--typographyVisualStyles-heading2XSmall-fontWeight);
  line-height: var(--typographyVisualStyles-heading2XSmall-mobile-lineHeight);
  text-transform: uppercase;
  margin: var(--spaceScale-spacing06) 0 var(--spaceScale-spacing03);
}

.emotion-0:focus {
  border-bottom: 2px dotted var(--colors-focus);
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

@media (min-width: 600px) {
  .emotion-0 {
    font-size: var(--typographyVisualStyles-heading2XSmall-desktop-fontSize);
    line-height: var(
          --typographyVisualStyles-heading2XSmall-desktop-lineHeight
        );
  }
}

<div>
  <h6
    class="emotion-0 emotion-1"
  >
    Heading 6
  </h6>
</div>
`;
